k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: usualstore
  labels:
    name: usualstore
    environment: production
