k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: usualstore
spec:
  type: ClusterIP
  ports:
  - port: 4001
    targetPort: 4001
    protocol: TCP
    name: http
  selector:
    app: backend
