k8s/12-invoice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice
  namespace: usualstore
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: invoice
